--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "editor.wordWrap": "on",
+  "editor.tabSize": 2,
   "workbench.colorCustomizations": {
     "titleBar.activeBackground": "#FF2C70",
     "titleBar.inactiveBackground": "#FF2C70CC"
