--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sick-fits-backend",
+  "name": "records-app-backend",
   "version": "1.0.0",
-  "description": "the backend of sick fits",
+  "description": "the backend",
   "scripts": {
     "start": "nodemon -e js,graphql -x node src/index.js",
     "playground": "graphql playground",
