initial records list

--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "editor.wordWrap": "on",
+  "editor.tabSize": 2,
   "workbench.colorCustomizations": {
     "titleBar.activeForeground": "#000",
     "titleBar.inactiveForeground": "#000000CC",
