--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .DS_Store
 node_modules/
 .env 
-yarn.lock
-package-lock.json
-records-app-setup.zip
+yarn.lock*
+package-lock.json*
+records-app-setup.zip*
 
 # Logs
 npm-debug.log*
