--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "records-app-backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.10.0"
+  },
   "description": "the backend",
   "scripts": {
     "start": "nodemon -e js,graphql -x node src/index.js",
